# font-fitter-engine

./: .gitignore  README.md  TODO.md  pyproject.toml
outputs/: test-s-32-sdf.csv  test-s-64-sdf.csv
outputs/sdf_generator_reports/: test-H-32-sdf.csv  test-H-512-sdf.csv  test-H-64-sdf.csv  test-T-32-sdf.csv  test-T-512-sdf.csv  test-T-64-sdf.csv  test-n-32-sdf.csv  test-n-512-sdf.csv  test-n-64-sdf.csv  test-o-32-sdf.csv  test-o-512-sdf.csv  test-o-64-sdf.csv  test-s-512-sdf.csv
outputs/search_repots/: test-H-32-200000.csv  test-H-32-300000.csv  test-H-32-800000.csv  test-H-32-900000.csv  test-H-32-9000000.csv  test-H-512-200000.csv  test-H-512-300000.csv  test-H-512-800000.csv  test-H-512-900000.csv  test-H-512-9000000.csv  test-H-64-200000.csv  test-H-64-300000.csv  test-H-64-800000.csv  test-H-64-900000.csv  test-H-64-9000000.csv  test-T-32-200000.csv  test-T-32-300000.csv  test-T-32-800000.csv  test-T-32-900000.csv  test-T-32-9000000.csv  test-T-512-200000.csv  test-T-512-300000.csv  test-T-512-800000.csv  test-T-512-900000.csv  test-T-512-9000000.csv  test-T-64-200000.csv  test-T-64-300000.csv  test-T-64-800000.csv  test-T-64-900000.csv  test-T-64-9000000.csv  test-n-32-200000.csv  test-n-32-300000.csv  test-n-32-800000.csv  test-n-32-900000.csv  test-n-32-9000000.csv  test-n-512-200000.csv  test-n-512-300000.csv  test-n-512-800000.csv  test-n-512-900000.csv  test-n-512-9000000.csv  (+35 more)
src/font_fitter_engine/: __init__.py  algo.py  cli.py  (+4 more)
testing_scripts/: test_sdf_generator.py  test_target_space_searcher.py  test_visual_density_calculator.py  visualize_sdf.py
(+20 files in other folders)
