[project]
name = "font-fitter-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chris Lai", email = "lcmchristopher@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fonttools>=4.59.2",
    "opencv-python>=4.12.0.88",
]

[project.scripts]
font-fitter-engine = "font_fitter_engine:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
