[project]
name = "font-fitter-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Chris Lai", email = "lcmchristopher@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "fonttools>=4.59.2",
    "freetype-py>=2.5.1",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "typer>=0.17.4",
    "ruff>=0.13.0",
]

[project.scripts]
font-fitter-engine = "font_fitter_engine.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
